--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.8",
     "express": "^4.18.2",
     "gapi-script": "^1.2.0",
+    "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "weather-icons": "^1.3.2",
@@ -38,6 +40,8 @@
     "@types/chart.js": "^2.9.41",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
